@@ -130,6 +130,20 @@ void recall::remove_temp_modifier(unit_map& unit_map)
 	resources::screen->invalidate_game_status();
 }
 
+void recall::draw_hex(map_location const& hex)
+{
+	if (hex == recall_hex_)
+	{
+		const double x_offset = 0.5;
+		const double y_offset = 0.7;
+		//position 0,0 in the hex is the upper left corner
+		std::stringstream number_text;
+		number_text << "-" << resources::teams->at(team_index()).recall_cost();
+		size_t font_size = 16;
+		SDL_Color color; color.r = 255; color.g = 0; color.b = 0; //red
+		resources::screen->draw_text_in_hex(hex, display::LAYER_ACTIONS_NUMBERING,
+						number_text.str(), font_size, color, x_offset, y_offset);
+	}
 }
 
 } //end namespace wb
