@@ -50,6 +50,8 @@ Version 1.9.0+svn:
    * Added events: turn end and turn X end_text
    * Added events: side turn end, side X turn end, side turn X end,
      and side X turn Y end
+ * Whiteboard
+   * Added cost display for planned recruits and recalls
  * Miscellaneous and bug fixes:
    * Removed: statistics upload code.
    * Changed: compiler mode set to c++98
